# mec-previsioni

./: .editorconfig  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  @ readme.md  @ struttura progetto.md  ANALISI_UI_MIGLIORAMENTI.md  CONTRIBUTING.md  DEPLOYMENT.md  DESCRIZIONE_PROGETTO.md  DEVELOPMENT.md  FIX_CREATED_BY.md  FIX_ORDINI_DUPLICATI.md  MIGRATION_GUIDE.md  MODELS_STRUCTURE.md  Makefile  README.md  STATO_PROGETTO.md  VALIDAZIONE_CLIENT_SIDE.md  app.py  config.py  create_test_ordini.py  docker-compose.postgres.yml  extensions.py  fix_ordini_constraints.py  forms.py  functions.py  init_db.py  inspect_schema.py  migrate_add_business_tables.py  migrate_add_created_by_to_users.py  migrate_add_stock_tipo_file.py  migrate_add_user_tracking.py  migrate_anagrafiche.py  migrate_convert_to_varchar.py  migrate_create_system_user.py  migrate_create_system_user.sql  migrate_pipeline_anagrafiche.py  (+28 more)
.github/workflows/: ci.yml
OUTPUT/: base_anagrafica.ipynb  base_rotture.ipynb  base_spareorder.ipynb  base_z_preparazione_dati.ipynb  fuori_garanzia.ipynb  output_anagrafica.xlsx  output_rotture.xlsx  output_rotture_filtrate.xlsx  output_rotture_filtrate_completate.xlsx  output_spareorder.xlsx
data/stock_tsv/: stock_2024-09-01.tsv  stock_2024-10-01.tsv  stock_2024-11-01.tsv
deployment/apache/: mec-previsioni-dev.conf  mec-previsioni-prod.conf
deployment/gunicorn/: gunicorn_config.py
deployment/systemd/: mec-previsioni.service
docs/: PDF_PARSING_IMPLEMENTATION.md
instance/: mec - Copy.db
locale/: README.md
locale/en/: rotture.json
locale/it/: rotture.json
migrations_sql/: README_ID_ELAB.md  README_MIGRAZIONE_ALFANUMERICI.md  README_USER_TRACKING.md  add_business_tables_alphanumeric.sql  add_id_elab_and_metrics.sql  add_stock_tables.sql  add_stock_to_trace_tipo_file.sql  add_user_tracking_columns.sql  convert_code_fields_to_varchar.sql
models/: __init__.py  anagrafica.py  ordine.py  rottura.py  user.py
preprocessing_PO/: config.py  master_pipeline.py  orders_model_quantity_FINAL.xlsx.force_recreate.bak  orders_model_quantity_FINAL_shadow - Copy.xlsx  xlsx_tmp_k1utzi_j.xlsx  ~$orders_model_quantity_FINAL_shadow.xlsx
preprocessing_PO/extractors/: __init__.py  pymupdf_extractor.py  utils.py  vision_llm_extractor.py
routes/: __init__.py  anagrafiche.py  anagrafiche_catalogo.py  auth.py  dashboard.py  dev_migrate.py  ordini.py  ordini_explorer.py  ordini_funzioni_elaborazione.py  previsioni.py  rotture.py  rotture_explorer.py  rotture_funzioni_elaborazione.py  stock.py  stock_explorer.py  users.py
scripts/: generate_stock_data.py  init_db.py  init_migrations.sh  migrate_ordini.py  migrate_rotture.py  parse_anagrafiche.py  pg_create_schema.py  pg_migrate_sqlite_to_postgres.py
services/: __init__.py  chart_service.py  data_service.py  file_manager.py  ordini_db_inserter.py  ordini_parser.py  prediction_service.py  statistical_service.py
templates/: base.html  help.html  home.html  index.html  login.html
templates/anagrafiche/: catalogo.html  catalogo_dettaglio.html  create - ana.html.txt  create.html  edit - ana.html.txt  edit.html  elaborazioni_list.html  list - Copy.html  list - ana.html.txt  list.html  nuova_marca.html  preview.html
templates/dashboard/: index.html
templates/errors/: 403.html  404.html  413.html  500.html
templates/ordini/: create.html  edit.html  elaborazione_dettaglio_modal.html  elaborazioni_list.html  explorer.html  explorer_dettaglio.html  list - ordini.html  list.html  trace.html
templates/previsioni/: previsioni.html  (+1 more)
tests/: README.md  __init__.py  conftest.py  test_auth.py  test_models.py  test_pipeline_anagrafiche.py  test_pipeline_ordini.py  test_sanity.py
utils/: db_log.py  decorators.py  ordini_parser.py  pdf_parser.py
(+33 files in other folders)
