# ============================================================================
# Project Configuration - pyproject.toml
# ============================================================================
# Configurazione unificata per tool di sviluppo Python
# ============================================================================

[project]
name = "mec-previsioni"
version = "0.1.0"
description = "Sistema di previsione affidabilità componenti meccanici"
requires-python = ">=3.9"

# ============================================================================
# Black - Code Formatter
# ============================================================================
[tool.black]
line-length = 88
target-version = ['py39', 'py310', 'py311']
include = '\.pyi?$'
extend-exclude = '''
/(
    \.git
  | \.venv
  | venv
  | env
  | __pycache__
  | instance
  | migrations
  | INPUT
  | OUTPUT
  | logs
  | build
  | dist
)/
'''

# ============================================================================
# isort - Import Sorting
# ============================================================================
[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip_glob = ["*/migrations/*", "*/venv/*", "*/env/*", "*/instance/*", "INPUT/*", "OUTPUT/*"]

# ============================================================================
# pytest - Testing Framework
# ============================================================================
[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
    "--cov=.",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

# ============================================================================
# coverage - Code Coverage
# ============================================================================
[tool.coverage.run]
source = ["."]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*_test.py",
    "*/venv/*",
    "*/env/*",
    "*/migrations/*",
    "*/instance/*",
    "*/INPUT/*",
    "*/OUTPUT/*",
    "setup.py",
    "*/preprocessing_PO/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

# ============================================================================
# mypy - Type Checking
# ============================================================================
[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false  # Cambiare a true quando si aggiungono type hints
ignore_missing_imports = true
exclude = [
    "venv",
    "env",
    "migrations",
    "instance",
    "INPUT",
    "OUTPUT",
]

# ============================================================================
# bandit - Security Linter
# ============================================================================
[tool.bandit]
exclude_dirs = [
    "/tests",
    "/venv",
    "/env",
    "/migrations",
    "/instance",
]
skips = [
    # B201: Permetti uso di flask_sqlalchemy (falso positivo)
    # Aggiungere altri skip se necessario
]
